# RoboSoccerAi

./: .gitignore  CMakeLists.txt  README.md  env.py  main.cpp  nproc.js  setup.py  train.py
docker/: Dockerfile
imagecapture/: imageCapture.c  luvcview.c  v4l2uvc.h
include/: agent.hpp  environment.hpp  misc.hpp  visualize.hpp
include/ext/ppo/: Models.h  ProximalPolicyOptimization.h
py/: agent.py  env.py  eval_live_soccer.py  imitate_soccer.py  net.py  test.py  test_drive.py  test_soccer.py  train.py  train_drive.py  train_soccer.py  train_soccer_pool.py
robo_api/: btcomm.c  btcomm.h  bytecodes.h
roboai/: roboAI.c  roboAI.h
src/: agent.cpp  environment.cpp  main.cpp  misc.cpp  pybind.cpp  visualize.cpp
